Make mbean functions protected by permission checks